hphp/test/zend/good/tests/lang/043.php.expectf
foo

Fatal error: Class undefined: B in %s/043.php on line 13
